feat: set/get storage. refactor: style, message handler. doc: update readme

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,7 +7,7 @@
   "background": {
     "service_worker": "service-worker.js"
   },
-  "permissions": ["tabs", "scripting"],
+  "permissions": ["tabs", "scripting", "storage"],
   "web_accessible_resources": [
     {
       "resources": [
